# wasml-linreg

./: README.md
wasml-linreg/: Cargo.toml  build.sh
wasml-linreg/src/: lib.rs  linear_regression.rs  transform.rs  utils.rs  watrix.rs
wasml-linreg/src/table/: cell.rs  column.rs  mod.rs  table.rs  transform.rs
wasml-linreg/src/warray/: mod.rs
web/: craco.config.js  package-lock.json  package.json
web/public/: index.html
web/src/: App.jsx
web/src/logic/: main.js  utils.js
