[package]
authors = ["Archit Bhonsle <abhonsle2000@gmail.com>"]
edition = "2018"
name = "wasml-linreg"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
csv = "1.1"
js-sys = "0.3"
ndarray="0.14"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wee_alloc = {version = "0.4.5", optional = true}

[dependencies.web-sys]
features = [
  "File",
]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
